more slice 1 work.